[package]
name = "boogie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.70", features = ["backtrace"] }
clap = { version = "4.1.13", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
nix = { version = "0.26.2", features = ["ptrace"], default-features = false }
